cmake_minimum_required(VERSION 3.16)
project(lightdelay)
set(CMAKE_CXX_STANDARD 14)
aux_source_directory(src DIR_SRCS)
aux_source_directory(src/thread_pool DIR_SRCS_TP)
add_subdirectory(3rdparty)
add_executable(lightdelay ${DIR_SRCS} ${DIR_SRCS_TP})
target_link_libraries(lightdelay yaml-cpp spdlog::spdlog)